--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "modern-normalize": "^3.0.1",
     "next": "16.0.0",
     "react": "19.2.0",
